--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ django-debug-toolbar = "^2.2"
 pytest-pythonpath = "^0.7.3"
 pytest-django = "^3.9.0"
 werkzeug = "^1.0.1"
+drf-yasg = {extras = ["validation"], version = "^1.17.1"}
 
 [build-system]
 requires = ["poetry>=0.12"]
