updating the env vars and adding redis specific helper commands

--- a/.env.template
+++ b/.env.template
@@ -1,2 +1,4 @@
 export DJANGO_SECRET_KEY="4kq7_g%y=85qls%ijt!t-9g8*a49)8xx)o$xor_coqjz76#nqo"
 export DEBUG="True"
+export REDIS_URL="redis://127.0.0.1:6379/1"
+export CACHE_TTL="60"
