--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ ipython = "^7.14.0"
 bpython = "^0.19"
 djangorestframework = "^3.11.0"
 django-redis = "^4.11.0"
+requests = "^2.23.0"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.3.0"
