films and people combination service and controller setup

--- a/.isort.cfg
+++ b/.isort.cfg
@@ -1,2 +1,2 @@
 [settings]
-known_third_party =configurations,django,drf_yasg,pytest,pytz,requests,rest_framework
+known_third_party =configurations,django,drf_yasg,pytest,requests,rest_framework
