--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,24 @@ pytest-pythonpath = "^0.7.3"
 pytest-django = "^3.9.0"
 werkzeug = "^1.0.1"
 drf-yasg = {extras = ["validation"], version = "^1.17.1"}
+black = "^19.10b0"
+
+[tool.black]
+line-length = 79
+include = '\.pyi?$'
+exclude = '''
+/(
+    \.git
+  | \.hg
+  | \.mypy_cache
+  | \.tox
+  | \.venv
+  | _build
+  | buck-out
+  | build
+  | dist
+)/
+'''
 
 [build-system]
 requires = ["poetry>=0.12"]
