--- a/.env.template
+++ b/.env.template
@@ -3,3 +3,6 @@ export DEBUG="True"
 export REDIS_URL="redis://127.0.0.1:6379/1"
 export CACHE_TTL="60"
 export GHIBLI_API_BASE_URL="https://ghibliapi.herokuapp.com/"
+export ENABLE_SENTRY="True"
+export SENTRY_KEY="2b4d5c6210e248d197e644e86e90cbcf@o336425"
+export SENTRY_PROJECT_ID="5239577"
