adding docker setup and separating .env with .poetry.env

--- a/.env.template
+++ b/.env.template
@@ -1,8 +1,8 @@
-export DJANGO_SECRET_KEY="4kq7_g%y=85qls%ijt!t-9g8*a49)8xx)o$xor_coqjz76#nqo"
-export DEBUG="True"
-export REDIS_URL="redis://127.0.0.1:6379/1"
-export CACHE_TTL="60"
-export GHIBLI_API_BASE_URL="https://ghibliapi.herokuapp.com/"
-export ENABLE_SENTRY="True"
-export SENTRY_KEY="2b4d5c6210e248d197e644e86e90cbcf@o336425"
-export SENTRY_PROJECT_ID="5239577"
+DJANGO_SECRET_KEY=4kq7_g%y=85qls%ijt!t-9g8*a49)8xx)o$xor_coqjz76#nqo
+DEBUG=True
+REDIS_URL=redis://redis:6379
+CACHE_TTL=60
+GHIBLI_API_BASE_URL=https://ghibliapi.herokuapp.com/
+ENABLE_SENTRY=True
+SENTRY_KEY=2b4d5c6210e248d197e644e86e90cbcf@o336425
+SENTRY_PROJECT_ID=5239577
