--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ authors = ["Abhishek Juneja <abhishek.juneja145@gmail.com>"]
 license = "MIT"
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "3.8.3"
 django = "2.2"
 django-configurations = "^2.2"
 django-extensions = "^2.2.9"
