--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ sentry-sdk = "^0.14.4"
 django-debug-toolbar = "^2.2"
 werkzeug = "^1.0.1"
 drf-yasg = {extras = ["validation"], version = "^1.17.1"}
+gunicorn = "^20.0.4"
 
 [tool.poetry.dev-dependencies]
 pre-commit = "^2.3.0"
